Route UniversityId was fixed; Direction ArrowCollapse and ArrowExpand was changed; Started changing the display of the university page by id.

--- a/src/react-app/university-book-shop/src/components/screens/University/UniversityList.module.css
+++ b/src/react-app/university-book-shop/src/components/screens/University/UniversityList.module.css
@@ -10,21 +10,3 @@
     overflow: hidden;
     margin-bottom: 40px;
 }
-
-/* .university-enter {
-    opacity: 0;
-}
-
-.university-enter-active {
-    opacity: 1;
-    transition: opacity 500ms ease-in;
-}
-
-.university-exit {
-    opacity: 1;
-}
-
-.university-exit-active {
-    opacity: 0;
-    transition: opacity 500ms ease-in;
-} */
